--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,8 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Receipts<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/receipts/new">Add</a>
+                <li><a href="<%= receipts_path %>">List</a>
+                <li><a href="<%= new_receipt_path %>">Add</a>
               </ul>
             </li>
 
