--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -1,3 +1,7 @@
+<div class="panel-heading">
+  <a href="<%=receipts_path %>"><div class="glyphicon glyphicon-chevron-left"/>Back</a>
+</div>
+
 <h1 id="receipt_name"><%= @receipt.name %></h1>
 
 <dl>
