--- a/app/views/shared/_imports.html.erb
+++ b/app/views/shared/_imports.html.erb
@@ -11,5 +11,5 @@
 <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
 <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
-<!-- Moment.js -->
+<!-- Moment.js (required by X-Editable date component) -->
 <script src="http://momentjs.com/downloads/moment.js"></script>
