--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -43,7 +43,9 @@
 </dl>
 
 <%= link_to 'Delete',  receipt_path(@receipt),
-    data: { confirm: 'Are you sure you want to delete this receipt?' }, method: :delete %>
+    data: { confirm: 'Are you sure you want to delete this receipt?' },
+    method: :delete,
+    class: "btn btn-sm btn-danger" %>
 
 <!-- Hidden Item Field -->
 <div style="display: none;">
