--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -6,4 +6,4 @@
   <%end%>
 </ul>
 
-<%= link_to "Add Receipt", new_receipt_path %>
+<%= render partial: 'form', locals: { receipt: Receipt.new(date: Date.today), title: 'New Receipt', submit_text: 'Create'} %>
