--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -3,128 +3,4 @@
 </div>
 
 <h1 id="receipt_name"><%= @receipt.name %></h1>
-
-<dl>
-  <dt>Store</dt>
-  <dd>
-    <a
-        href="#"
-        id="store"
-        data-type="text"
-        data-pk="<%= @receipt.id %>"
-        data-url="<%= receipt_path(@receipt) %>"
-        class="editable editable-click"
-        style="display: inline;">
-      <%= @receipt.store %>
-    </a>
-  </dd>
-
-  <dt>Date</dt>
-  <dd>
-    <a
-        href="#"
-        id="date"
-        data-type="combodate"
-        data-pk="<%= @receipt.id %>"
-        data-url="<%= receipt_path(@receipt) %>"
-        class="editable editable-click"
-        style="display: inline;">
-      <%= @receipt.date %>
-    </a>
-  </dd>
-
-  <dt>items</dt>
-  <dd>
-    <div id="items">
-      <!-- Item Fields go here -->
-    </div>
-    <button id="add_item" class="btn btn-sm btn-success glyphicon glyphicon-plus-sign" type="button"></button>
-  </dd>
-</dl>
-
-<%= link_to 'Delete',  receipt_path(@receipt),
-    data: { confirm: 'Are you sure you want to delete this receipt?' },
-    method: :delete,
-    class: "btn btn-sm btn-danger" %>
-
-<!-- Hidden Item Field -->
-<div style="display: none;">
-  <div id="item_field">
-    <a
-        data-name="name"
-        class="item-field"
-        href="#"
-        data-type="text"
-        data-placeholder="Enter item name"
-        style="display: inline;">
-    </a>
-    <button class="btn btn-sm btn-danger glyphicon glyphicon-minus-sign remove-item" type="button"></button>
-    <br/>
-  </div>
-</div>
-
-<script type="application/javascript">
-  $(document).ready(function() {
-    $.fn.editable.defaults.mode = 'inline';
-    $.fn.editable.defaults.ajaxOptions = {type: "PUT"};
-    $('.editable').editable({
-      success: function(response, newValue) {
-        $("#receipt_name").text(response.name);
-      }
-    });
-
-    // When user adds new item, add new X-editable field
-    $("#add_item").click(function() {
-      var item_name = prompt("What item would you like to add?");
-      if (item_name != null) {
-        $.ajax({
-          type: "POST",
-          url: '<%= receipt_items_path(@receipt) %>',
-          data: { 'receipt_id': '@receipt.id', 'item[name]': item_name },
-          success: add_item,
-          dataType: 'json'
-        });
-      }
-    });
-
-    function add_item(item) {
-      var field = $("#item_field").clone();
-      var new_id = 'item_' + $("#items a").length;
-      field.attr('id', new_id);
-
-      var input = field.find('a');
-      input.text(item.name);
-      input.attr('data-pk', item.id);
-      input.attr('data-url', '<%= receipt_items_path(@receipt) %>' + '/' + item.id);
-
-      $("#items").append(field);
-
-      // Make name required
-      $("#" + new_id + " .item-field").editable('option', 'validate', function(v) {
-        if(!v) return 'Required field!';
-      });
-
-      // Remove item when the remove button is clicked
-      $("#" + new_id + " .remove-item").click(function() {
-        var parent = $(this).parent();
-        var item_name = parent.find(" a").text();
-        if (confirm("Are you sure you want to remove this item from your receipt? " + item.name)) {
-          $.ajax({
-            type: "DELETE",
-            url: '<%= receipt_items_path(@receipt) %>' + '/' + item.id,
-            success: function() {
-              parent.remove();
-            }
-          });
-        }
-      });
-    }
-
-    // Add Existing item fields
-    $(document).ready(function() {
-      <% @receipt.items.each do |item| %>
-        add_item({ id: '<%= item.id %>', name: '<%= item.name %>' });
-      <% end %>
-    });
-  });
-</script>
+<%= render partial: 'form', locals: { receipt: @receipt, title: 'Edit', submit_text: 'Update' } %>
