--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -3,4 +3,15 @@
 </div>
 
 <h1 id="receipt_name"><%= @receipt.name %></h1>
+
+<!-- Image -->
+<%= render partial: 'image', locals: { receipt: @receipt } %>
+<br/>
+
 <%= render partial: 'form', locals: { receipt: @receipt, title: 'Edit', submit_text: 'Update' } %>
+<%= render partial: 'upload', locals: { receipt: @receipt } %>
+
+<%= link_to 'Delete',  receipt_path(@receipt),
+    data: { confirm: 'Are you sure you want to delete this receipt?' },
+    method: :delete,
+    class: "btn btn-danger" %>
