--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,6 @@
  *= require_tree .
  *= require_self
  *= require bootstrap-datetimepicker
+ *= require bootstrap-social
+ *= require font-awesome
  */
