delegate receipt name to helper

--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @receipts.each do |receipt| %>
-    <li><%= link_to receipt.name, receipt_path(receipt) %></li>
+    <li><%= link_to receipt_name(receipt), receipt_path(receipt) %></li>
   <%end%>
 </ul>
 
