--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="navbar-text">
               Signed in as <strong><%= current_user.name %></strong>
+              <img src="<%= current_user.image_link %>"/>
             </li>
-            <li>
+            <li class="navbar-link">
               <%= link_to "Sign out", signout_path, id: "sign_out" %>
             </li>
           </ul>
