--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,34 +5,32 @@
   <%= render 'shared/imports' %>
 </head>
 <body>
-  <div>
-    <!-- Navbar -->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-          <!-- Navbar Header -->
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/">
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+          <!-- Brand -->
+          <a class="navbar-brand" href="/">
+            <span>
+              <img width="32" height="32" src="<%= asset_path('branding.png') %>"/>
               Omni Receipts
-            </a>
-          </div>
+            </span>
+          </a>
 
-          <!-- Session -->
-          <ul class="nav navbar-nav navbar-right">
-            <li class="navbar-text">
-              Signed in as <strong><%= current_user.name %></strong>
-              <img src="<%= current_user.image_link %>"/>
-            </li>
-            <li class="navbar-link">
-              <%= link_to "Sign out", signout_path, id: "sign_out" %>
-            </li>
+          <!-- Session Button -->
+          <button type="button" class="navbar-toggle navbar-right collapsed" data-toggle="collapse" data-target="#profile-menu">
+            <img class="img img-rounded" width="32" height="32" src="<%= current_user.image_link %>"/>
+          </button>
+        </div>
+
+        <!-- Hidden Session Menu -->
+        <div class="collapse navbar-collapse navbar-right" id="profile-menu">
+          <ul class="nav navbar-nav">
+            <li class="nabvar-text" style="padding: 20.5px 0;">Signed in as <%= current_user.name %></li>
+            <li class="navbar-link"><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <!-- Navbar End -->
-  </div>
+      </div>
+    </div>
+  </nav>
 
   <!-- Body Content -->
   <div class="container-fluid">
