--- a/app/views/receipts/_delete.html.erb
+++ b/app/views/receipts/_delete.html.erb
@@ -11,7 +11,7 @@
       </div>
       <!-- End Modal Header -->
 
-      <%= form_for receipt do |f| %>
+      <%= form_for receipt, :method => :delete do |f| %>
 
         <!-- Modal Body -->
         <div class="modal-body">
