refactor receipt and add tests

--- a/app/views/receipts/_delete.html.erb
+++ b/app/views/receipts/_delete.html.erb
@@ -15,7 +15,7 @@
 
         <!-- Modal Body -->
         <div class="modal-body">
-          <p>Are you sure you want to delete <b><%= receipt_name(receipt) %></b>?</p>
+          <p>Are you sure you want to delete <b><%= receipt.name %></b>?</p>
         </div>
         <!-- End Modal Body -->
 
