make receipt back link into a button

--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="panel-heading">
-  <a href="<%=receipts_path %>"><div class="glyphicon glyphicon-chevron-left"/>Back</a>
+  <a href="<%=receipts_path %>" class="btn">Back</a>
 </div>
 
 <h1 id="receipt_name"><%= @receipt.name %></h1>
