add new receipt button to top of receipt and make image responsive

--- a/app/views/receipts/_image.html.erb
+++ b/app/views/receipts/_image.html.erb
@@ -5,6 +5,6 @@
 <% else %>
   <% image_url = receipt.image_link %>
   <a href='<%= image_url %>'>
-    <img src='<%= image_url %>' />
+    <img class="img-responsive" src='<%= image_url %>' />
   </a>
 <% end %>
