--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -6,4 +6,4 @@
   <%end%>
 </ul>
 
-<%= render partial: 'upload', locals: { receipt: Receipt.new } %>
+<%= render partial: 'upload', locals: { title: 'New Receipt', receipt: Receipt.new } %>
